Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81307

[REG 5.13.2->5.14.0]: QLocale is not correctly resolved on iOS

    XMLWordPrintable

Details

    • iOS/tvOS/watchOS
    • 0b28f1e3bae10def59e7fe8afac29ed5355a3f1e (qt/qtbase/5.14)

    Description

      After upgrading to Qt 5.14 the behaviour of Qt.locale(), QLocale(), QLocale::system() changed. 
      instead of loading the current system settings default values are loaded.

      See attached screenshot.  

      Steps to reproduce:

      Create an empty project and setup for kit for iOS, add QLocale(), QLocale::system() and/or Qt.locale() in QML. Observer the returned value which appears to always be default values rather then the system values.

      Expected:

      System settings should be loaded in the QLocale object. 

      Attachments

        For Gerrit Dashboard: QTBUG-81307
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            joxye Johan Lindström
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes